# planner

./: .dockerignore  .env  .gitignore  Cargo.toml  Dockerfile  Shuttle.toml  compose.yaml  fly.toml  nas-compose.yaml
.sqlx/: query-1017e02e24907c5de794aa26d86d7a721bc3f684ec7b0a3001f592a71c113f96.json  query-1a7a5113aef35e4bf7c85cbb3d49b21a4e7b0fd3ee013b66ff535a6ae3a871ce.json  query-5b8fbbe377bbf559cad0a69693a23f543c61bdcfe8f096531075ec3fd4ff7441.json
backend/: Cargo.toml  requirements.txt  schema.sql
backend/migrations/: 0001_create-users.up.sql  0002_create-tasks.up.sql  0003_create-iterations.down.sql  0003_create-iterations.up.sql  0003_create-test-data.up.sql  20231013044801_create-iterations-2.down.sql  20231013044801_create-iterations-2.up.sql  20231017025626_create-iterations-3.down.sql  20231017025626_create-iterations-3.up.sql  20231025074322_create-iterations.down.sql  20231025074322_create-iterations.up.sql  20240105021755_remove-iteration-date-range.down.sql  20240105021755_remove-iteration-date-range.up.sql  20240119062404_add-task-schedule.down.sql  20240119062404_add-task-schedule.up.sql  20240808052611_dev-1.down.sql  20240808052611_dev-1.up.sql  20240924070255_add-recurring-columns.down.sql  20240924070255_add-recurring-columns.up.sql  atlas.sum
backend/migrations/local-dev/: 9999_create-test-data.up.sql
backend/scripts/: diff-schema  generate-migration  generate-test-data  generate-test-data.py  login-and-print-header.py  revert-dev-migration.py
backend/src/: auth.rs  batch_job.rs  db.rs  graphql.rs  lib.rs  main.rs  model.rs  testlib.rs  utils.rs
backend/src/app/: maybe.rs  mod.rs  task.rs  time.rs
backend/src/entities/: iterations.rs  iterations_tasks.rs  mod.rs  prelude.rs  sea_orm_active_enums.rs  task.rs  task_schedule.rs  tasks.rs  users.rs
backend/src/graphql/: iteration.rs  mod.rs  plan.rs  task.rs  task_item.rs  task_schedule.rs
backend/tests/: common.rs  graphql_task.rs  matchers.rs  testlib.rs
envs/: local.env
frontend/: .gitignore  .graphqlrc  .prettierignore  app.svelte  codegen.ts  houdini.config.js  package.json  pnpm-lock.yaml  schema.graphql  svelte.config.js  tailwind.config.js  tsconfig.json  tsconfig.node.json  tsconfig.tsbuildinfo  vite.config.ts
frontend-react/: .prettierrc  codegen.ts  eslint.config.js  package.json  pnpm-lock.yaml  schema.graphql  tsconfig.app.json  vite.config.ts
frontend-react/src/: index.css  main.tsx
frontend-react/src/components/: EditTaskDialog.tsx  Navbar.tsx  TaskCard.tsx  TodoCheckbox.tsx  modeToggle.tsx
frontend-react/src/graphql/: date.ts  task.ts
frontend-react/src/lib/: date.ts  task.ts
frontend-react/src/routes/: App.tsx  Login.tsx
frontend/src/: app.css  client.js  generated-introspection.json  main.tsx
frontend/src/components/: EditTaskDialog.tsx  EpochSelector.tsx  Navbar.tsx  TaskCard.tsx  TaskList.tsx  TaskListItem.tsx  TaskUIComponents.tsx
frontend/src/gql/: gql.ts  graphql.ts
frontend/src/graphql/: task.ts
frontend/src/lib/: auth.ts  datetime.ts  graph_cache.ts  index.ts  task.ts  type_helpers.ts  utils.ts
frontend/src/lib/components/: clickToEdit.svelte  clickToEditNumber.svelte  dateSelector.svelte  taskCard.svelte  taskScheduleCard.svelte
frontend/src/lib/components/taskCard/: circleCheckButton.svelte  clickToEdit.svelte  clickToEditNumber.svelte
frontend/src/routes/: +layout.svelte  +page.svelte  App.tsx  Planning.tsx  Tasks.tsx
frontend/src/routes/iteration/[id]/: +page.svelte  +page.ts
frontend/src/routes/login/: +page.svelte
frontend/src/routes/task-schedules/: +page.svelte
frontend/src/routes/tasks/: +page.gql  +page.svelte
testlib/: Cargo.toml
testlib/src/: lib.rs
