[package]
name = "planner-backend"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "local"

[dependencies]
anyhow = "1.0.75"
async-graphql = { version = "6.0.6", features = ["log", "uuid"] }
async-graphql-axum = "6.0.6"
axum = "0.6.20"
dotenv = "0.15.0"
postgres = "0.19.7"
shuttle-axum = "0.27.0"
shuttle-runtime = "0.27.0"
shuttle-shared-db = { version = "0.27.0", features = ["postgres"] }
sqlx = { version = "0.7.1", features = ["runtime-tokio", "uuid", "postgres"] }
thiserror = "1.0.48"
tokio = { version = "1.32.0", features = ["rt", "macros", "rt-multi-thread"] }
tower-http = { version = "0.4.4", features = ["trace", "fs"] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
uuid = { version = "1.4.1", features = ["v7"] }
