[package]
name = "testlib"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.77"
chrono = "0.4.31"
derive_builder = "0.12.0"
sqlx = "0.7.3"
testcontainers = "0.15.0"
testcontainers-modules = { version = "0.2.0", features = ["postgres"] }
tokio-stream = "0.1.14"
uuid = { version = "1.6.1", features = ["v8"] }
