[package]
name = "testlib"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.77"
chrono = "0.4.31"
sea-orm = { version = "0.12.10", features = ["runtime-tokio"] }
sqlx = "0.7.3"
sqlx-postgres = "0.7.3"
testcontainers = "0.15.0"
testcontainers-modules = { version = "0.2.0", features = ["postgres"] }
uuid = { version = "1.6.1", features = ["v8"] }
